--- a/machine.html
+++ b/machine.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=o9uCafw9&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nFkQoMwu'>Align Technology Careers - Software Development Engineer in Test (Python) - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=o9uCafw9&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nFkQoMwu'>Align Technology Careers - Software Development Engineer in Test (Python) - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -213,7 +213,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Bangkok Thailand?  Thailand</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://techflow.applytojob.com/apply/LDJ4j3MszN/Machine-Learning-AI-Developer'>Machine Learning AI Developer - TechFlow - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://techflow.applytojob.com/apply/LDJ4j3MszN/Machine-Learning-AI-Developer'>Machine Learning AI Developer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -267,7 +267,7 @@ healthcare?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
+<h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
       Senior Machine Learning Developer - wrnch
     </a></h5> 
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
@@ -294,7 +294,7 @@ healthcare?...</p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -302,7 +302,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/incloudcounsel/jobs/4385899002'>Job Application for Machine Learning Research Scientist at InCloudCounsel</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/incloudcounsel/jobs/4385899002'>Job Application for Machine Learning Research Scientist at InCloudCounsel</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -366,13 +366,13 @@ ML;?...</p>
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
       Trader with Machine Learning experience - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/loftium/84835383-cd2f-41cb-9fcf-7115f488f8b2'>Loftium - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loftium/84835383-cd2f-41cb-9fcf-7115f488f8b2'>Loftium - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
@@ -448,7 +448,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p>Oct 8, 2019 ... Apply online for the job of Machine Learning Internship/Placement (Summer 
 2020) at artificial.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jobber/jobs/4486747002'>Job Application for Senior Full Stack Engineer - Machine Learning at Jobber</a></h5> 
+<h5><a href='https://boards.greenhouse.io/jobber/jobs/4486747002'>Job Application for Senior Full Stack Engineer - Machine Learning at Jobber</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -473,7 +473,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://humana.wd5.myworkdayjobs.com/en-US/Humana_External_Career_Site/job/Boston-MA/Cognitive-Machine-Learning---Data-Scientist_R-220021?source=BuiltInBoston'>Cognitive/Machine Learning - Data Scientist</a></h5> 
+<h5><a href='https://humana.wd5.myworkdayjobs.com/en-US/Humana_External_Career_Site/job/Boston-MA/Cognitive-Machine-Learning---Data-Scientist_R-220021?source=BuiltInBoston'>Cognitive/Machine Learning - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Humana's Data Health and Analytics Team is seeking a Cognitive/Machine 
 Learning ?Data Scientist. This position collaborates with analytic and data teams 
