--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,26 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
+    Education Specialist III: MLTI Project Manager  at State of Maine
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698539366-learning-development-project-manager-l-p'>Square Learning & Development Project Manager, L&P | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=olBrbfwi&__jvst=Employee+Referral&__jvsd=sVq6aiwo&__jvsc=Twitter&bid=nyKfpMwd'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/Project-Manager-Oracle-Cloud'>Project Manager - Oracle Cloud - Applications Software Technology LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TheCreativeSquareCompanyPteLtd/743999698538571-project-manager'>The Creative Square Company Pte. Ltd. Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://hitchcock.referrals.selectminds.com/jobs/project-manager-ft-psychiatry-research-days-6862'>Project Manager (FT), Psychiatry Research - Days - Dartmouth-Hitchcock Careers</a></h5> 
@@ -60,7 +74,7 @@
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698536876-associate-director-senior-project-manager-sydney'>Turner & Townsend Associate Director / Senior Project Manager - Sydney | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698536876-associate-director-senior-project-manager-sydney'>Turner & Townsend Associate Director / Senior Project Manager - Sydney | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney  Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -112,7 +126,7 @@
 <p><span class="badge badge-light">Redmond, WA  ?  Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AltagramGmbH/743999698362758-localization-project-manager-m-f-d-video-games'>Altagram GmbH Localization Project Manager (m/f/d) Video Games | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AltagramGmbH/743999698362758-localization-project-manager-m-f-d-video-games'>Altagram GmbH Localization Project Manager (m/f/d) Video Games | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin, Germany Seoul Montreal, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -140,7 +154,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -156,7 +170,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -192,7 +206,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
+<h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -260,11 +274,11 @@
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -362,7 +376,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487339-project-manager'>Bosch Group Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487339-project-manager'>Bosch Group Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -370,7 +384,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/spin/e2fa791f-1c1b-4c48-9960-ae2999bbbbef'>Spin - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/spin/e2fa791f-1c1b-4c48-9960-ae2999bbbbef'>Spin - Project Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -410,7 +424,7 @@
 <p><span class="badge badge-light">Vienna North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CheckpointSystems/743999698470440-project-manager'>Checkpoint Systems Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CheckpointSystems/743999698470440-project-manager'>Checkpoint Systems Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -422,24 +436,12 @@
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://sundt.referrals.selectminds.com/jobs/senior-project-manager-building-group-1118'>Senior Project Manager  - Building Group - Sundt Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sundt.referrals.selectminds.com/jobs/senior-project-manager-building-group-1118'>Senior Project Manager  - Building Group - Sundt Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://sundt.referrals.selectminds.com/jobs/project-manager-texas-transportation-group-1116'>Project Manager - Texas Transportation Group - Sundt Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466946-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/program-manager-85058'>Program Manager -  Johnson Controls Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698465239-project-manager'>Playtech Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
